--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@headlessui/react": "^2.2.0",
 		"@heroicons/react": "^2.2.0",
 		"@tailwindcss/typography": "^0.5.15",
 		"@types/bcryptjs": "^2.4.6",
@@ -17,6 +18,7 @@
 		"mongoose": "^8.8.2",
 		"next": "^15.0.3",
 		"next-auth": "^4.24.10",
+		"next-themes": "^0.4.3",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-hot-toast": "^2.4.1",
